syntax = "proto3";
package summa.proto;

import "query.proto";


// Searches documents in the stored indices
service SearchApi {
  rpc search (SearchRequest) returns (SearchResponse) {}
}

message SearchRequest {
  repeated IndexQuery index_queries = 1;
  map<string, string> tags = 2;
}

message IndexQuery {
  // The index name or alias
  string index_alias = 1;
  // Query DSL. Use `MatchQuery` to pass a free-form query
  Query query = 2;
  // Every collector is responsible of processing and storing documents and/or their derivatives (like counters)
  // to return them to the caller
  repeated Collector collectors = 3;
}
