syntax = "proto3";
package summa.proto;


// Service
service BeaconApi {
  rpc publish_index (PublishIndexRequest) returns (PublishIndexResponse) {}
}

message PublishIndexRequest {
  string index_alias = 1;
  bool copy = 2;
}

message PublishIndexResponse {
  message Key {
    string name = 1;
    string id = 2;
  }
  Key key = 1;
}
